tests/functional/lang/eval-fail-to-path.err.exp
error:
       … while calling the 'toPath' builtin
         at /pwd/lang/eval-fail-to-path.nix:1:1:
            1| builtins.toPath "foo/bar"
             | ^
            2|

       … while evaluating the first argument passed to builtins.toPath

         at /pwd/lang/eval-fail-to-path.nix:1:1:

            1| builtins.toPath "foo/bar"
             | ^
            2|

       error: string 'foo/bar' doesn't represent an absolute path
